# Copyright (c) 2021-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/lite/config/component/lite_component.gni")

config("histreamer_utils_config") {
  include_dirs = [
    "//foundation/multimedia/histreamer/engine",
    "//foundation/multimedia/histreamer/engine/foundation",
    "//foundation/multimedia/histreamer/engine/plugin",
  ]
  defines = [ "MEDIA_OHOS" ]
}

source_set("histreamer_utils") {
  sources = [
    "constants.cpp",
    "utils.cpp",
  ]
  public_configs = [ ":histreamer_utils_config" ]
  public_deps = [ "//foundation/multimedia/histreamer/engine/foundation:histreamer_foundation" ]
  cflags = [
    "-fPIC",
    "-O2",
  ]
  cflags_cc = cflags
}
