# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/multimedia/histreamer/config.gni")

module_output_path = "histreamer/fuzztest"

histreamer_unittest_cflags = [
  "-std=c++17",
  "-Wall",
  "-Werror",
]

#################################################################################################################
ohos_unittest("histreamer_fuzz_test") {
  module_out_path = module_output_path
  include_dirs = []
  cflags = histreamer_unittest_cflags
  defines = []
  deps = []
  external_deps = []
  public_configs = []
  sources = []
}
