# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/multimedia/histreamer/config.gni")

#################################################################################################################
group("histreamer_scene_test") {
  testonly = true
  deps = []
  if (!hst_is_lite_sys) {
    deps += [
      "audio_player:histreamer_audio_player_test",
      "audio_recorder:histreamer_audio_recorder_test",
      "video_player:histreamer_video_player_test",
      "video_recorder:histreamer_video_recorder_test",
    ]
  }
}
