# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/multimedia/histreamer/config.gni")

module_output_path = "histreamer/ut"

histreamer_unittest_cflags = [
  "-std=c++17",
  "-Wall",
  "-Werror",
]

#################################################################################################################
ohos_unittest("histreamer_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "$histreamer_root_dir/tests/ut/plugins/",
    "$histreamer_root_dir/tests/ut/",
    "$histreamer_root_dir/engine/include/plugin/",
    "./plugins/",
  ]
  cflags = histreamer_unittest_cflags

  deps = [
    "$histreamer_root_dir/engine/pipeline:histreamer_pipeline_base",
    "$histreamer_root_dir/engine/pipeline/filters/demux:demuxer_filter",
    "$histreamer_root_dir/engine/plugin:histreamer_plugin_base",
    "$histreamer_root_dir/engine/plugin:histreamer_plugin_core",
    "$histreamer_root_dir/engine/plugin/plugins/ffmpeg_adapter:ffmpeg_demuxers",
    "$histreamer_root_dir/engine/scene/player:histreamer_player",
    "//third_party/googletest:gtest_rtti",
  ]

  sources = [
    "$histreamer_root_dir/engine/include/plugin/common/plugin_types.h",
    "$histreamer_root_dir/engine/include/plugin/core/plugin_manager.h",
    "./TestAlgoExt.cpp",
    "./TestAny.cpp",
    "./TestBitReader.cpp",
    "./TestBufferPool.cpp",
    "./TestCompatibleCheck.cpp",
    "./TestDataPacker.cpp",
    "./TestFFmpegUtils.cpp",
    "./TestFilter.cpp",
    "./TestHiPlayer.cpp",
    "./TestMeta.cpp",
    "./TestMimeDefs.cpp",
    "./TestPluginManager.cpp",
    "./TestSynchronizer.cpp",
    "./plugins/UtSourceTest1.cpp",
    "./plugins/UtSourceTest2.cpp",
  ]
}
