# Copyright (c) 2021-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")

  group("histreamer_plugin_store") {
    deps = [
      "ffmpeg_adapter:plugin_ffmpeg_adapter",
      "source/file_source:plugin_file_source",
      "source/stream_source:plugin_stream_source",

      #"hdi_adapter:plugin_hdi_adapter"
    ]
  }
}
