# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/histreamer/config.gni")

config("media_foundation_buffer_public_config") {
  include_dirs = [
    "$histreamer_root_dir/interface/kits/c",
    "$histreamer_root_dir/interface/inner_api/buffer",
    "$histreamer_root_dir/../../graphic/graphic_2d/interface/inner_api/surface",
  ]

  cflags = [
    "-fexceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wdate-time",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]
}

ohos_shared_library("media_foundation_buffer") {
  install_enable = true
  public_configs = [ ":media_foundation_buffer_public_config" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = []

  public_deps =
      [ "$histreamer_root_dir/src/buffer/avbuffer:media_foundation_avbuffer" ]

  deps = []
  external_deps = []

  subsystem_name = "multimedia"
  part_name = "histreamer"
}
